[project]
name = "delivery-env"
version = "0.1.0"
description = "Delivery Robot OpenEnv Environment"
authors = [{name = "AIGEN3 Team"}]

dependencies = [
    "pydantic",
    "openai",
    "numpy",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "env:DeliveryEnv"